Added delete and update to user endpoint
